Fix overflow for the Google icon

--- a/api/ui/src/app.scss
+++ b/api/ui/src/app.scss
@@ -21,10 +21,13 @@ body {
 
     .header {
       width: 100%;
+      height: 8%;
       display: inherit;
       flex-direction: row;
       background: transparent;
-  
+      align-items: center;
+      overflow: hidden;
+
       .left-box {
         width: 50%;
         display: inherit;
@@ -45,6 +48,8 @@ body {
       max-width: 1024px;
       display: inherit;
       flex-direction: column;
+      position: relative;
+      top: 10%;
       p {
         color: white;
         text-align: center;
